--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html data-bs-theme="dark">
   <head>
+    <title>Sort</title>
+    <meta charset="UTF-8"> 
     <link data-trunk rel="icon" type="image/ico" href="/public/favicon.ico" />
     <link data-trunk rel="css" href="/public/css/bootstrap.min.css" />
     <link data-trunk rel="css" href="/public/css/bootstrap-icons.min.css" />
@@ -8,6 +10,5 @@
     <script data-trunk rel="js" src="/public/js/bootstrap.bundle.min.js" defer="true"></script>
   </head>
   <body>
-    <canvas id="canvas"/>
   </body>
 </html>
