--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link data-trunk rel="icon" type="image/ico" href="/public/favicon.ico" />
     <link data-trunk rel="css" href="/public/css/bootstrap.min.css" />
     <link data-trunk rel="css" href="/public/css/bootstrap-icons.min.css" />
+    <link data-trunk rel="copy-dir" href="/public/css/fonts" />
     <link data-trunk rel="css" href="/public/css/leptos-sort.css" />
     <script data-trunk rel="js" src="/public/js/bootstrap.bundle.min.js" defer="true"></script>
   </head>
